# weather-mcp-agent

./: .env.example  .gitignore  README.md  new.ipynb  pyproject.toml
src/agent/: agent.py  memory.py
src/cli/: main.py
src/mcp_server/: email_tools.py  file_tools.py  server.py  weather_api.py
src/web/: app.py
tests/: test_mcp_server.py  test_memory.py  test_weather_api.py
